--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # just a flag
 ENV = 'development'
 
-# base api  192.168.158.63  192.168.158.39  10.20.10.29:8880  10.20.10.143:8880   10.20.10.15(道哥) 
+# base api  192.168.158.63  192.168.158.39  10.20.10.29:8880  10.20.10.143:8880  
 VUE_APP_BASE_API = 'http://10.20.10.161:8880'
 
