--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "vue-router": "3.4.7",
     "vue-splitpane": "1.0.6",
     "vue-video-player": "^5.0.2",
+    "vue2-org-tree": "^1.3.6",
     "vue3-video-play": "^1.3.1-beta.5",
     "vuedraggable": "2.24.0",
     "vuescroll": "^4.17.3",
@@ -133,6 +134,8 @@
     "form-gen-parser": "^1.0.3",
     "html-webpack-plugin": "4.3.0",
     "husky": "4.2.5",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "lint-staged": "10.2.11",
     "mockjs": "1.1.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
